tests/invalidprograms/semantic/assignment.tds
Program {
	void main() {
		Int x = True;
	}
}
